2005-01-08  Jorn Baayen  <jbaayen@gnome.org>

	* src/SongDatabase.cs:

	Forgot to set rq.Album.. oops.. would crash when an album would
	be removed.

2005-01-08  Jorn Baayen  <jbaayen@gnome.org>

	* src/Song.cs:

	Call EmitSongChanged when setting Duration.

2005-01-08  Jorn Baayen  <jbaayen@gnome.org>

	* configure.in:

	Release 0.8.0pre4.
	
	* po/POTFILES.in:
	* src/Makefile.am:
	
	Fix 'make distcheck'.

2005-01-08  Jorn Baayen  <jbaayen@gnome.org>

	* src/CoverGetter.cs:

	Move more things out of idles into threads. This should be it.

2005-01-08  Jorn Baayen  <jbaayen@gnome.org>

	* src/Album.cs:
	* src/CoverDatabase.cs:
	* src/CoverGetter.cs:
	* src/Song.cs:

	Rearrange some things to move the call to GetAmazon into
	the thread as well.

2005-01-08  Jorn Baayen  <jbaayen@gnome.org>

	* src/CoverDatabase.cs:
	* src/CoverGetter.cs:

	Don't keep looking for covers that are not on amazon.

2005-01-08  Jorn Baayen  <jbaayen@gnome.org>

	* src/Album.cs:
	* src/CoverDatabase.cs:
	* src/CoverGetter.cs:

	Amazon cover downloading is back again.

2005-01-08  Jorn Baayen  <jbaayen@gnome.org>

	* PluginLib/IPlayer.cs:
	* TODO:
	* doc/en/Muine.PluginLib/IPlayer.xml:
	* src/CoverDatabase.cs:
	* src/FileUtils.cs:
	* src/PlaylistWindow.cs:

	Add BusyLevel to IPlayer. If BusyLevel > 0, Muine displays
	a busy cursor.

2005-01-08  Jorn Baayen  <jbaayen@gnome.org>

	* src/Global.cs:

	Clean up ProcessCommandLine.

2005-01-08  Jorn Baayen  <jbaayen@gnome.org>

	* src/PlaylistWindow.cs:
	* src/SongDatabase.cs:

	Support loading multiple folders in one loading session.

2005-01-08  Jorn Baayen  <jbaayen@gnome.org>

	* src/CoverDatabase.cs:

	Re-commit CoverDB rehash. Bad Tamara! :)

2005-01-08  Jorn Baayen  <jbaayen@gnome.org>

	* src/SongDatabase.cs:

	Small cleanup.

2005-01-08  Jorn Baayen  <jbaayen@gnome.org>

	* src/PlaylistWindow.cs:

	Clean up EOS and Previous handling.
	
	* doc/en/Muine.PluginLib/IPlayer.xml:

	Slight clean up in the UIManager example code.
